Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ body{
 
 <div class="slide active">
   <div class="heart">❤</div>
-  <h3>Happy New Year Drishti ✨</h3>
+  <h3>Happy New Year✨</h3>
   <p style="margin-top:12px">Are you pretty?</p>
   <button class="option" onclick="next()">A. Yes</button>
   <button class="option" onclick="next()">B. Option A</button>
@@ -239,3 +239,4 @@ function closeEnvelope(){
 
 </body>
 </html>
+
